메인 구조 변경